--- a/index.html
+++ b/index.html
@@ -1,5 +1,20 @@
 <!DOCTYPE html>
 <html>
+<head>
+	<title>My Favorite Activites</title>
+</head>
+<body>
+	<h1>My Favorite Activites</h1>
+	<h3>I am someone who loves spendnig time doing the things I love. Here are some of my favorite activites I like to do.</h3>
+	<ul>
+		<li><a href="poleVaulting.html">Pole Vaulting</a></li>
+		<br/>
+		<li><a href="rockClimbing.html">Rock Climbing</a></li>
+	<br/>
+		<li><a href="photography.html">Photography</a></li>
+	</ul>
+
+</body>
 </html>
 
 
