--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 </head>
 <body>
 	<h1>My Favorite Activites</h1>
-	<h3>I am someone who loves spendnig time doing the things I love. Here are some of my favorite activites I like to do.</h3>
+	<h3>I am someone who loves spending time doing the things I love. When I have free time, I always enjoy excerising and spending time outside. Here are some of my favorite activites I like to do.</h3>
 	<ul>
 		<li><a href="poleVaulting.html">Pole Vaulting</a></li>
 		<br/>
@@ -13,6 +13,8 @@
 	<br/>
 		<li><a href="photography.html">Photography</a></li>
 	</ul>
+	<br>
+	<img src="Outdooractivites.jpg" alt="Outdoor Activites"/>
 
 </body>
 </html>
