--- a/photography.html
+++ b/photography.html
@@ -2,16 +2,18 @@
 <html>
 <head>
 	<title>Photography</title>
+	<link href="style.css" type="text/css" rel="stylesheet" />
 </head>
 <body>
 	<h1>Photography</h1>
-	<h3>Photography is something that I didn't start being interested in at one certain point. Throughout my life, I have always been interested in taking photos. It wasn't until after I took a photography camp in 2019 that my interest grew larger. I have really enjoyed learning about the camera, its features and playing around with things like photoshop. </h3>
+	<h3>Photography is something that I didn't start being interested in at one certain point. Throughout my life, I have always been interested in taking photos. It wasn't until after I took a photography camp in 2019 that my interest grew even more. I have really enjoyed learning a lot about the camera, its features and playing around with things like photoshop. </h3>
 <br/> 
-	<a href="index.html"> Home </a>
-	<br>
 	<br>
 
 <img src="photography.jpg" alt="Photography"/>
+	<br>
+	<br>
+	<a href="index.html"> Home </a>
 
 </body>
 </html>
