--- a/rockClimbing.html
+++ b/rockClimbing.html
@@ -2,16 +2,19 @@
 <html>
 <head>
 	<title> Rock Climbing</title>
+	<link href="style.css" type="text/css" rel="stylesheet" />
 </head>
 <body>
 	<h1>Rock Climbing</h1>
 	<h3>I also started rock climbing when I injured myself at gymnastics. I started to look into rock climbing because my sister was already on the climbing team. When I started the team, it was intense, but was really fun. I love being able to work through each problem, trying to come up with unique ways to finish the climbs.</h3>
 <br/> 
-	<a href="index.html"> Home </a>
-	<br>
 	<br>
 
 <img src="rockclimbing.jpg" alt="Rock Climbing"/>
+	<br>
+	<br>
+	<a href="index.html"> Home </a>
+
 
 </body>
 </html>
