--- a/index.html
+++ b/index.html
@@ -2,10 +2,11 @@
 <html>
 <head>
 	<title>My Favorite Activites</title>
+	<link href="style.css" type="text/css" rel="stylesheet" />
 </head>
 <body>
 	<h1>My Favorite Activites</h1>
-	<h3>I am someone who loves spending time doing the things I love. When I have free time, I always enjoy excerising and spending time outside. Here are some of my favorite activites I like to do.</h3>
+	<h3>I am someone who loves spending time doing the things I love. When I have free time, I always enjoy excerising and spending time outside. Here are some of my favorite activites I like to do:</h3>
 	<ul>
 		<li><a href="poleVaulting.html">Pole Vaulting</a></li>
 		<br/>
