--- a/poleVaulting.html
+++ b/poleVaulting.html
@@ -2,16 +2,20 @@
 <html>
 <head>
 	<title>Pole Vaulting</title>
+	<link href="style.css" type="text/css" rel="stylesheet" />
 </head>
 <body>
 	<h1>Pole Vaulting </h1>
 	<h3>I started pole vaulting about two years ago after I got an injury in gymnastics. I decided to try it out and have loved it ever since. I love the feeling of jumping and swinging in the air. I also love working on each little skills to help my entire vault flow. </h3>
 <br/> 
-	<a href="index.html"> Home </a>
-<br>
+
+
 <br>
 
 <img src="Polevaulting.jpg" alt="Pole Vaulting"/>
+	<br>
+	<br>
+	<a href="index.html"> Home </a>
 
 </body>
 </html>
