--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 		<li><a href="photography.html">Photography</a></li>
 	</ul>
 	<br>
-	<img src="Outdooractivites.jpg" alt="Outdoor Activites"/>
+	<img src="Outdooractivites.jpg" alt="Outdoor Activites" class="center"/>
 
 </body>
 </html>
