--- a/photography.html
+++ b/photography.html
@@ -10,7 +10,7 @@
 <br/> 
 	<br>
 
-<img src="photography.jpg" alt="Photography"/>
+<img src="photography.jpg" alt="Photography" class="center" />
 	<br>
 	<br>
 	<a href="index.html"> Home </a>
