--- a/poleVaulting.html
+++ b/poleVaulting.html
@@ -6,13 +6,13 @@
 </head>
 <body>
 	<h1>Pole Vaulting </h1>
-	<h3>I started pole vaulting about two years ago after I got an injury in gymnastics. I decided to try it out and have loved it ever since. I love the feeling of jumping and swinging in the air. I also love working on each little skills to help my entire vault flow. </h3>
+	<h3>I started pole vaulting about two years ago after I got an injury in gymnastics. I decided to try it out and have loved it ever since. I love the feeling of jumping and swinging in the air. I also love working on each little skill to help my entire vault flow. </h3>
 <br/> 
 
 
 <br>
 
-<img src="Polevaulting.jpg" alt="Pole Vaulting"/>
+<img src="Polevaulting.jpg" alt="Pole Vaulting" class="center" />
 	<br>
 	<br>
 	<a href="index.html"> Home </a>
