--- a/rockClimbing.html
+++ b/rockClimbing.html
@@ -10,7 +10,7 @@
 <br/> 
 	<br>
 
-<img src="rockclimbing.jpg" alt="Rock Climbing"/>
+<img src="rockclimbing.jpg" alt="Rock Climbing" class="center" />
 	<br>
 	<br>
 	<a href="index.html"> Home </a>
